tests/ui/associated-inherent-types/generic-associated-types-bad.item.stderr
error[E0277]: the trait bound `String: Copy` is not satisfied
  --> $DIR/generic-associated-types-bad.rs:16:10
   |
LL | const _: Ty::Pr<String> = String::new();
   |          ^^^^^^^^^^^^^^ the trait `Copy` is not implemented for `String`
   |
help: item with same name found
  --> $SRC_DIR/alloc/src/bstr.rs:LL:COL
   = note: perhaps two different versions of crate `alloc` are being used?
help: item with same name found
  --> $SRC_DIR/alloc/src/ffi/c_str.rs:LL:COL
   = note: perhaps two different versions of crate `alloc` are being used?
help: item with same name found
  --> $SRC_DIR/std/src/ffi/os_str.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?
note: required by a bound in `Ty::Pr`
  --> $DIR/generic-associated-types-bad.rs:10:16
   |
LL |     type Pr<T: Copy> = T;
   |                ^^^^ required by this bound in `Ty::Pr`

error[E0277]: the trait bound `String: Copy` is not satisfied
  --> $DIR/generic-associated-types-bad.rs:16:27
   |
LL | const _: Ty::Pr<String> = String::new();
   |                           ^^^^^^^^^^^^^ the trait `Copy` is not implemented for `String`
   |
help: item with same name found
  --> $SRC_DIR/alloc/src/bstr.rs:LL:COL
   = note: perhaps two different versions of crate `alloc` are being used?
help: item with same name found
  --> $SRC_DIR/alloc/src/ffi/c_str.rs:LL:COL
   = note: perhaps two different versions of crate `alloc` are being used?
help: item with same name found
  --> $SRC_DIR/std/src/ffi/os_str.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?
note: required by a bound in `Ty::Pr`
  --> $DIR/generic-associated-types-bad.rs:10:16
   |
LL |     type Pr<T: Copy> = T;
   |                ^^^^ required by this bound in `Ty::Pr`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
